config/base/catalogd/manager/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-manager
  namespace: system
  annotations:
    kubectl.kubernetes.io/default-logs-container: manager
  labels:
    control-plane: catalogd-controller-manager
spec:
  selector:
    matchLabels:
      control-plane: catalogd-controller-manager
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        control-plane: catalogd-controller-manager
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - amd64
                    - arm64
                    - ppc64le
                    - s390x
                - key: kubernetes.io/os
                  operator: In
                  values:
                    - linux
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - command:
        - ./catalogd
        args:
        - --leader-elect
        - --metrics-bind-address=:7443
        - --external-address=catalogd-service.olmv1-system.svc
        image: controller:latest
        name: manager
        volumeMounts:
            - name: cache
              mountPath: /var/cache/
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        imagePullPolicy: IfNotPresent
        terminationMessagePolicy: FallbackToLogsOnError
      serviceAccountName: controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
        - name: cache
          emptyDir: {}
