config/base/catalogd/manager/catalogd_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
      app.kubernetes.io/part-of: olm
      app.kubernetes.io/name: catalogd
  name: service
  namespace: system
spec:
  selector:
    control-plane: catalogd-controller-manager
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8443
  - name: pprof
    port: 8083
    targetPort: 8083
  - name: webhook
    protocol: TCP
    port: 9443
    targetPort: 9443
  - name: metrics
    protocol: TCP
    port: 7443
    targetPort: 7443
