config/base/catalogd/manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: __NAMESPACE_PLACEHOLDER__
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8443
  - name: webhook
    protocol: TCP
    port: 9443
    targetPort: 9443
  - name: metrics
    protocol: TCP
    port: 7443
    targetPort: 7443
