config/base/catalogd/manager/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: controller-manager
  namespace: system
spec:
  podSelector:
    matchLabels:
      control-plane: catalogd-controller-manager
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 7443 # metrics
        - protocol: TCP
          port: 8443 # catalogd http server
        - protocol: TCP
          port: 9443 # webhook
  egress:
    - {}  # Allows all egress traffic (needed to pull catalog images from arbitrary image registries)
